--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
         "128": "images/icon-128.png"
     },
     "side_panel": {
-        "default_path": "public/sidepanel.html"
+        "default_path": "sidepanel.html"
     },
     "background": {
         "service_worker": "service-worker.js"
@@ -31,16 +31,19 @@
                 "https://*.avianca.com/*"
             ],
             "css": [
-                "styles/styles.css"
+                "index.css"
             ],
             "js": [
-                "scripts/content-app.js"
-            ],
-            "run_at": "document_idle",
-            "world": "ISOLATED"
+                "content-app.js"
+            ]
         }
     ],
+    "host_permissions": [
+        "http://*/*",
+        "https://*/*"
+    ],
     "permissions": [
-        "sidePanel"
+        "sidePanel",
+        "activeTab"
     ]
 }
