--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Valores por defecto en formulario de pasajeros avianca",
+    "name": "Avianca Passenger",
     "version": "1.0.0",
     "description": "Establecer valores por defecto en el formulario de pasajeros en la plataforma avianca.com. El número de pasajeros puede ser n; y puede ser cualquier tipo de pasajero (adultos, jóvenes, niños o bebés).",
     "icons": {
