feat: logic completed extension fill fields form passenger

--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,7 @@
                 "index.css"
             ],
             "js": [
-                "content-app.js"
+                "content-scripts.js"
             ]
         }
     ],
