feat: refactor UI desing and add method payment

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Avianca Passenger",
+    "name": "Avianca AutoForm",
     "version": "1.0.0",
-    "description": "Establecer valores por defecto en el formulario de pasajeros en la plataforma avianca.com. El número de pasajeros puede ser n; y puede ser cualquier tipo de pasajero (adultos, jóvenes, niños o bebés).",
+    "description": "Establecer valores por defecto en el formulario de pasajeros y check-in en la plataforma avianca.com. El número de pasajeros puede ser n; y puede ser cualquier tipo de pasajero (adultos, jóvenes, niños o bebés).",
     "icons": {
         "32": "images/icon-32.png",
         "48": "images/icon-48.png",
@@ -20,7 +20,7 @@
             "48": "images/icon-48.png",
             "128": "images/icon-128.png"
         },
-        "default_title": "Abrir configuración"
+        "default_title": "Avianca AutoForm"
     },
     "author": {
         "email": "fainnerramirez@gmail.com"
