--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "terser-webpack-plugin": "^5.3.14",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "firebase": "^11.9.1"
   }
 }
